--- a/hierachy-app/package.json
+++ b/hierachy-app/package.json
@@ -23,8 +23,13 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.17",
+    "@predigle/micro": "^0.0.6",
     "express": "^4.18.2",
+    "html2canvas": "^1.4.1",
+    "ngx-image-cropper": "^9.1.5",
+    "ngx-skeleton-loader": "^9.0.0",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
