--- a/hierachy-app/package.json
+++ b/hierachy-app/package.json
@@ -6,25 +6,22 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "serve:ssr:hierachy-app": "node dist/hierachy-app/server/server.mjs"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.3.0",
     "@angular/cdk": "^17.3.10",
-    "@angular/common": "^17.3.0",
+    "@angular/common": "^17.3.12",
     "@angular/compiler": "^17.3.0",
-    "@angular/core": "^17.3.0",
+    "@angular/core": "^17.3.12",
     "@angular/forms": "^17.3.0",
     "@angular/material": "^17.3.10",
-    "@angular/platform-browser": "^17.3.0",
+    "@angular/platform-browser": "^17.3.12",
     "@angular/platform-browser-dynamic": "^17.3.0",
-    "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.17",
     "@predigle/micro": "^0.0.6",
-    "express": "^4.18.2",
     "html2canvas": "^1.4.1",
     "ngx-image-cropper": "^9.1.5",
     "ngx-skeleton-loader": "^9.0.0",
