--- a/hierachy-app/package.json
+++ b/hierachy-app/package.json
@@ -23,6 +23,8 @@
     "@angular/ssr": "^17.3.17",
     "@predigle/micro": "^0.0.6",
     "html2canvas": "^1.4.1",
+    "keycloak-angular": "^15.3.0",
+    "keycloak-js": "^25.0.6",
     "ngx-image-cropper": "^9.1.5",
     "ngx-skeleton-loader": "^9.0.0",
     "rxjs": "~7.8.0",
